--- a/app/views/demo/index.html.erb
+++ b/app/views/demo/index.html.erb
@@ -1,1 +1,11 @@
-<%= @route_permissions.to_json%>
+<applet id="screenSaver" name="screenSaver"
+        code="ScreenSaver.class" archive="applets/ScreenSaver.jar"
+        width="640" height="480">
+Java applet that draws animated bubbles.
+</applet>
+
+<script type="text/javascript">
+  GY.use(function(Y) {
+
+  });
+</script>
