--- a/app/views/demo/index.html.erb
+++ b/app/views/demo/index.html.erb
@@ -1,11 +1,11 @@
-<applet id="screenSaver" name="screenSaver"
-        code="ScreenSaver.class" archive="applets/ScreenSaver.jar"
-        width="640" height="480">
-Java applet that draws animated bubbles.
-</applet>
+<div id="testDiv"></div>
 
+<%= link_to "testButton", {}, :href => "javascript:void(0);", :id => "testButton"%>
 <script type="text/javascript">
   GY.use(function(Y) {
+      var testDiv = Y.one("#testDiv");
+      var appletStr = '<applet id="screenSaver" name="screenSaver" code="ScreenSaver.class" archive="applets/ScreenSaver.jar" width="640" height="480"> Java applet that draws animated bubbles. </applet>';
 
+      testDiv.set("innerHTML", appletStr);
   });
 </script>
