IE7 下点击页面上的“帮助”链接，帮助页面没有弹出。 包括顶部菜单的“帮助”以及所有页面的“此页面帮助”链接

--- a/app/views/irm/home/index.html.erb
+++ b/app/views/irm/home/index.html.erb
@@ -15,7 +15,7 @@
       </div>
     </div>
     <div class="links">
-      <a onclick="window.open ('/pagehelpfiles/home.html', 'Ironmine Help', 'height=800px, width=870px, top=0, left=0, toolbar=no, menubar=no,scrollbars=yes, location=no, status=no');" href="#"><%=t(:current_page_help)%></a></div>
+      <a onclick="window.open ('/pagehelpfiles/home.html', 'Ironmine_Help', 'height=800px, width=870px, top=0, left=0, toolbar=no, menubar=no,scrollbars=yes, location=no, status=no');" href="#"><%=t(:current_page_help)%></a></div>
   </div>
 </div>
 <div class="pbSubsection" id="templateBody" style="display:none" current="portal">
