--- a/app/views/layouts/uid.html.erb
+++ b/app/views/layouts/uid.html.erb
@@ -54,7 +54,7 @@
                         <%= current_role_menu %>
                         <span class="navLinks" style="float:right">
                           <span class="linkElements">
-                            <a style="margin-right:29px;" href="#" onclick="window.open ('/helpfiles/index.html', 'Ironmine Help', 'height=800px, width=870px, top=0, left=0, toolbar=no, menubar=no,scrollbars=yes, location=no, status=no');"><%= t :help %></a>
+                            <a style="margin-right:29px;" href="#" onclick="window.open ('/helpfiles/index.html', 'Ironmine_Help', 'height=800px, width=870px, top=0, left=0, toolbar=no, menubar=no,scrollbars=yes, location=no, status=no');"><%= t :help %></a>
                           </span>
                         </span>
                         <span id="settingMenu" class="menuParent" style="float:right">
