--- a/app/views/icm/group_assignments/_new_form.html.erb
+++ b/app/views/icm/group_assignments/_new_form.html.erb
@@ -37,15 +37,37 @@
                                               available_ass_support_groups,
                                               {},
                                               {:id=>"support_group", :required => true}%></td>
-              <td class="labelCol"><label for="ass_company"><%=t(:label_irm_company_name)%></label></td>
-              <td class="dataCol"><%=f.select :customer_company_id,
-                                              available_ass_companies,
-                                              {},
-                                              {:id=>"ass_company", :required => true}%></td>
+              <td class="labelCol"></td>
+              <td class="dataCol"></td>
             </tr>
             <tr>
               <td class="labelCol"><label for="ass_status_code"><%=(t :active)%></label></td>
               <td class="dataCol"><%=f.select :status_code, available_active_status, {}, {:id => "ass_status_code"}%></td>
+              <td class="labelCol"></td>
+              <td class="dataCol"></td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label for="assign_type"><%= t :label_icm_group_assignment_type %></label></td>
+              <td class="dataCol"><%= f.select :assign_type,
+                                                 options_for_select(Irm::LookupValue.get_lookup_value("ICM_GROUP_ASSIGN_TYPE").collect { |p| [p.wrap_meaning, p.lookup_code]}) %></td>
+              <td class="labelCol"></td>
+              <td class="dataCol"></td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label for="ass_company"><%=t(:label_irm_company_name)%></label></td>
+              <td class="dataCol"><%=f.select :customer_company_id,
+                                              available_ass_companies,
+                                              {},
+                                              {:id=>"ass_company"}%></td>
+              <td class="labelCol"><%= t :label_uid_external_system %></td>
+              <td class="dataCol">
+                <%=f.select :external_system_code,
+                            nullable_options_for_select(available_external_systems.collect{|p| [p[:system_name], p.external_system_code]},@group_assignment.external_system_code),
+                            {},
+                            {:id=>"ass_external_system"}%>
+              </td>
+            </tr>
+            <tr>
               <td class="labelCol"><label for="ass_organization"><%=t(:label_irm_location_organization)%></label></td>
               <td class="dataCol"><%=f.select :customer_organization_id,
                                             nullable_options_for_select([],nil),
@@ -54,12 +76,21 @@
                                              :depend=>"ass_company",
                                              :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---",
                                              :href=>url_for(:controller=>"icm/group_assignments",:action=>"get_customer_organizations",:format=>"json",:customer_company_id=>"{ass_company}")}%></td>
-
-
+              <td class="labelCol">
+                <%= t :label_slm_service_category %>
+              </td>
+              <td class="dataCol">
+                  <%=f.select :service_code,
+                            nullable_options_for_select([],@group_assignment.service_code),
+                            {},
+                            {:id=>"incident_request_service_code",
+                             :depend=>"ass_external_system",
+                             :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---",
+                             :href=>url_for(:controller=>"icm/incident_requests",:action=>"get_all_slm_services",:format=>"json",
+                                             :external_system_code=>"{ass_external_system}")}%>
+              </td>
             </tr>
             <tr>
-              <td class="labelCol"></td>
-              <td class="dataCol"></td>
               <td class="labelCol"><label for="ass_department"><%=t(:label_irm_location_department)%></label></td>
               <td class="dataCol"><%=f.select :customer_department_id,
                                               nullable_options_for_select([],nil),
@@ -68,10 +99,11 @@
                                                :depend=>"ass_organization",
                                                :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---",
                                                :href=>url_for(:controller=>"icm/group_assignments",:action=>"get_customer_departments",:format=>"json",:customer_organization_id=>"{ass_organization}")}%></td>
-            </tr>
-            <tr>
+
               <td class="labelCol"></td>
               <td class="dataCol"></td>
+            </tr>
+            <tr>
               <td class="labelCol"><label for="ass_people"><%=t(:label_irm_person)%></label></td>
               <td class="dataCol"><%=f.select :customer_person_id,
                                               nullable_options_for_select([],nil),
@@ -80,6 +112,8 @@
                                               :depend=>"ass_department",
                                               :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---",
                                               :href=>url_for(:controller=>"icm/group_assignments",:action=>"get_customer_people",:format=>"json",:customer_department_id=>"{ass_department}")}%></td>
+              <td class="labelCol"></td>
+              <td class="dataCol"></td>
             </tr>
         </tbody>
       </table>
@@ -105,6 +139,7 @@
      new Y.CascadeSelect({source: "#ass_company",target:["#ass_organization"]});
      new Y.CascadeSelect({source: "#ass_organization",target:["#ass_department"]});
      new Y.CascadeSelect({source: "#ass_department",target:["#ass_people"]});
+     new Y.CascadeSelect({source: "#ass_external_system",target:["#incident_request_service_code"]});
   });
 </script>
 
