组分派增加了服务维度，可以根据事故单的服务和系统来指派支持组。
目前是服务维度的规则优先。就是说，当没有找到适合当前事故单的服务和系统的规则，才去根据提单人的组织信息，从组织维度再找分派规则。

--- a/app/views/icm/group_assignments/_edit_form.html.erb
+++ b/app/views/icm/group_assignments/_edit_form.html.erb
@@ -50,7 +50,7 @@
             <tr>
               <td class="labelCol"><label for="assign_type"><%= t :label_icm_group_assignment_type %></label></td>
               <td class="dataCol"><%= f.select :assign_type,
-                                                 options_for_select(Irm::LookupValue.get_lookup_value("ICM_GROUP_ASSIGN_TYPE").collect { |p| [p.wrap_meaning, p.lookup_code]}) %></td>
+                                               options_for_select(Irm::LookupValue.get_lookup_value("ICM_GROUP_ASSIGN_TYPE").collect { |p| [p.wrap_meaning, p.lookup_code]}, @group_assignment.assign_type) %></td>
               <td class="labelCol"></td>
               <td class="dataCol"></td>
             </tr>
