--- a/app/views/irm/bulletins/_new_form.html.erb
+++ b/app/views/irm/bulletins/_new_form.html.erb
@@ -1,6 +1,11 @@
 <%= setting_title %>
 <%= form_for(@bulletin,:url=>{:controller =>"irm/bulletins", :action=>"create"},:builder => LabellingFormBuilder) do |f| %>
 <%= hidden_field_tag :return_url,@return_url %>
+<style type="text/css">
+  div.actonType{
+      float:left;
+  }
+</style>
 <div id="ep" class="bEditBlock bPageBlock">
   <div class="pbHeader">
     <table cellpadding="0" cellspacing="0" border="0">
@@ -54,50 +59,78 @@
       </table>
     </div>
   </div>
+
   <div class="pbBody">
     <div class="pbSubheader first tertiaryPalette">
-      <h3><%= t(:label_irm_bulletin_access)%></h3>
+      <h3><%= t(:label_irm_bulletin_access) %><span style="font-weight:normal;font-size:12px;">&nbsp;-&nbsp;<%=  t(:label_irm_bulletin_if_access_list_none)  %></span></h3>
     </div>
     <div class="pbSubsection">
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
             <tr>
-              <td class="labelCol"><label><%=(t :label_irm_bulletin_access_availabel_companies)%></label></td>
-              <td class="data2Col">
-                <%= select_tag("ava_companies", options_for_select(ava_access_companies),
-                               {:id => "ava_companies", :include_blank => "--- #{t(:actionview_instancetag_blank_option)} ---"})%>
-                <%= select_tag("ava_organizations", nullable_options_for_select([],nil),
-                    {:id=>"ava_organizations",
-                       :depend=>"ava_companies",
-                       :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---",
-                       :href=>url_for(:controller=>"irm/bulletins",:action=>"get_ava_organizations",:format=>"json",:company_id=>"{ava_companies}")})%>
-                <%= select_tag("ava_departments", nullable_options_for_select([],nil),
-                    {:id=>"ava_departments",
-                       :depend=>"ava_organizations",
-                       :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---",
-                       :href=>url_for(:controller=>"irm/bulletins",:action=>"get_ava_departments",:format=>"json",:organization_id=>"{ava_organizations}")})%>
-                <%= link_to t(:label_irm_bulletin_add_to_access_rule), {}, {:href => "javascript:void(0);", :onclick => "addCompanyRule();"}%></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
             </tr>
             <tr>
-              <td class="labelCol"><label><%=(t :label_irm_bulletin_access_availabel_roles)%></label></td>
-              <td class="data2Col"><%= select_tag("ava_roles", options_for_select(ava_access_roles), {:id => "ava_roles"})%>
-                <%= link_to t(:label_irm_bulletin_add_to_access_rule), {}, {:href => "javascript:void(0);", :onclick => "addRoleRule();"}%></td>
+              <td class="labelCol"><label for="actionType"><%=t(:label_irm_wf_rule_action_type)%></label></td>
+              <td class="dataCol" colspan="3" style="width:82%">
+                <div class="actonType">
+                     <label><%= t(:search) %></label>
+                </div>
+                <div class="actonType">
+                  <select id="actionType">
+                    <option value="C"><%= t(:label_irm_company_show) %></option>
+                    <option value="O"><%= t(:label_irm_organization) %></option>
+                    <option value="D"><%= t(:label_irm_department_show) %></option>
+                    <option value="R"><%= t(:label_irm_role) %></option>
+                  </select>
+                </div>
+                <div class="actonType">
+                  <input type="text" size="30" id="duelQuery"/>
+                </div>
+                <div class="actonType">
+                   <div class="button"><a href="javascript:void(0)" id="duelSearch"><%=t(:search) %></a></div>
+                </div>
+              </td>
+            </tr>
+            <tr id="actions">
+              <td class="labelCol"></td>
+              <td class="dataCol" colspan="3" width="82%">
+                <table class="duel">
+                  <tr class="duelTitle">
+                    <th><%= t(:duel_selectable)%></th>
+                    <th></th>
+                    <th><%= t(:duel_selected)%></th>
+                  </tr>
+                  <tr class="duelList">
+                    <td class="sourceCell">
+                      <%= select_tag_alias(:source,ava_bulletin_accesses,nil,{:id=>"source",:multiple=>true,:size=>14}) %>
+                    </td>
+                    <td class="buttonCell">
+                      <div class="text"><%= t(:add) %></div>
+                      <div class="text">
+                        <a href="javascript:void(0)" id="duelAdd"><img title="<%= t(:add) %>" class="rightArrowIcon" alt="<%= t(:add) %>" src="<%= theme_image_path("s.gif") %>"></a>
+                      </div>
+                      <div class="text">
+                        <a href="javascript:void(0)" id="duelRemove"><img title="<%= t(:delete) %>" class="leftArrowIcon" alt="<%= t(:delete) %>" src="<%= theme_image_path("s.gif") %>"></a>
+                      </div>
+                      <div class="duelingText"><%= t(:delete) %></div>
+                    </td>
+                    <td class="targetCell">
+                      <%= hidden_field_tag(:selected_actions, "", {:id=>"selectedActions"}) %>
+                      <%= select_tag_alias(:target,[],nil,{:id=>"target",:multiple=>true,:size=>14}) %>
+                    </td>
+                  </tr>
+                </table>
+              </td>
             </tr>
         </tbody>
       </table>
     </div>
   </div>
-  <div class="pbBody">
-    <div class="pbSubheader first tertiaryPalette">
-      <h3><%= t(:label_irm_bulletin_access_list) %><span style="font-weight:normal;font-size:12px;">&nbsp;-&nbsp;<%=  t(:label_irm_bulletin_if_access_list_none)  %></span></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody id="detailList">
-        </tbody>
-      </table>
-    </div>
-  </div>
+
   <div class="pbBottomButtons">
     <table cellpadding="0" cellspacing="0" border="0">
       <tbody>
@@ -117,150 +150,6 @@
   </div>
 </div>
 <% end %>
-<script type="text/javascript">
-
-
-  GY.use("cascadeselect",function(Y){
-     new Y.CascadeSelect({source: "#ava_companies",target:["#ava_organizations"]});
-     new Y.CascadeSelect({source: "#ava_organizations",target:["#ava_departments"]});
-  });
-
-  var line_count = 0;
-
-  function addCompanyRule(){
-      GY.use(function(Y)
-      {
-            var c_selected = "";
-            var c_value = "";
-            var c_text = "";
-
-            var d_selected = "";
-            var d_value = "";
-            var d_text = "";
-
-            var o_selected = "";
-            var o_value = "";
-            var o_text = "";
-
-            Y.one("#ava_departments").get("options").each( function(){
-                if(this.get('selected'))
-                {
-                    d_selected = this.get('selected');
-                    d_value  = this.get('value');
-                    d_text = this.get('text');
-                }
-            });
-            Y.one("#ava_organizations").get("options").each( function(){
-                if(this.get('selected'))
-                {
-                    o_selected = this.get('selected');
-                    o_value  = this.get('value');
-                    o_text = this.get('text');
-                }
-            });
-            Y.one("#ava_companies").get("options").each( function() {
-                if(this.get('selected'))
-                {
-                    c_selected = this.get('selected');
-                    c_value  = this.get('value');
-                    c_text = this.get('text');
-                }
-            });
-
-            if(d_value != ""){
-                var node = Y.Node.create(
-                    '<tr id="tr_' + line_count+ '"><td class="labelCol"><%= t :label_irm_bulletin_selected_departments%></td><td class="data2Col">' + c_text + " " + o_text + " " + d_text +
-                    '<a href="javascript:void(0);" onclick="remove_line(' + line_count+ ');" >&nbsp;&nbsp;<%= t :delete%></a></td>' +
-                    '<input type="hidden" name="accesses[' + line_count + '][type]" value="DEPARTMENT">' +
-                    '<input type="hidden" name="accesses[' + line_count + '][access_id]" value="' + d_value + '">' +
-                    '</tr>'
-                );
-
-            }
-            else if (o_value != ""){
-                var node = Y.Node.create(
-                    '<tr id="tr_' + line_count+ '"><td class="labelCol"><%= t :label_irm_bulletin_selected_organizations%></td><td class="data2Col">' + c_text + " " + o_text +
-                    '<a href="javascript:void(0);" onclick="remove_line(' + line_count+ ');" >&nbsp;&nbsp;<%= t :delete%></a></td>' +
-                    '<input type="hidden" name="accesses[' + line_count + '][type]" value="ORGANIZATION">' +
-                    '<input type="hidden" name="accesses[' + line_count + '][access_id]" value="' + o_value + '">' +
-                    '</tr>'
-                );
-            }
-            else if (c_value != ""){
-                var node = Y.Node.create(
-                    '<tr id="tr_' + line_count+ '"><td class="labelCol"><%= t :label_irm_bulletin_selected_companies%></td><td class="data2Col">' + c_text +
-                    '<a href="javascript:void(0);" onclick="remove_line(' + line_count+ ');" >&nbsp;&nbsp;<%= t :delete%></a></td>' +
-                    '<input type="hidden" name="accesses[' + line_count + '][type]" value="COMPANY">' +
-                    '<input type="hidden" name="accesses[' + line_count + '][access_id]" value="' + c_value + '">' +
-                    '</tr>'
-                );
-            }
-
-            line_count ++;
-            Y.one("#detailList").appendChild(node);
-      })
-  }
-
-  function addDepartmentRule(){
-      GY.use(function(Y)
-      {
-            var selected = "";
-            var value = "";
-            var text = "";
-            Y.one("#ava_departments").get("options").each( function() {
-            if(this.get('selected'))
-            {
-                selected = this.get('selected');
-                value  = this.get('value');
-                text = this.get('text');
-            }
-            });
-
-            var node = Y.Node.create(
-                '<tr id="tr_' + line_count+ '"><td class="labelCol"><%= t :label_irm_bulletin_selected_departments%></td><td class="data2Col">' + text +
-                '<a href="javascript:void(0);" onclick="remove_line(' + line_count+ ');" >&nbsp;&nbsp;<%= t :delete%></a></td>' +
-                '<input type="hidden" name="accesses[' + line_count + '][type]" value="DEPARTMENT">' +
-                '<input type="hidden" name="accesses[' + line_count + '][access_id]" value="' + value + '">' +
-                '</tr>'
-            );
-            line_count ++;
-            Y.one("#detailList").appendChild(node);
-      })
-  }
-
-  function addRoleRule(){
-      GY.use(function(Y)
-      {
-            var selected = "";
-            var value = "";
-            var text = "";
-            Y.one("#ava_roles").get("options").each( function() {
-            if(this.get('selected'))
-            {
-                selected = this.get('selected');
-                value  = this.get('value');
-                text = this.get('text');
-            }
-            });
-
-            var node = Y.Node.create(
-                '<tr id="tr_' + line_count+ '"><td class="labelCol"><%= t :label_irm_bulletin_selected_roles%></td><td class="data2Col">' + text +
-                '<a href="javascript:void(0);" onclick="remove_line(' + line_count+ ');" >&nbsp;&nbsp;<%= t :delete%></a></td>' +
-                '<input type="hidden" name="accesses[' + line_count + '][type]" value="ROLE">' +
-                '<input type="hidden" name="accesses[' + line_count + '][access_id]" value="' + value + '">' +
-                '</tr>'
-            );
-            line_count ++;
-            Y.one("#detailList").appendChild(node);
-      })
-  }
-
-  function remove_line(l){
-      GY.use(function(Y){
-          Y.one("#tr_" + l).remove();
-      })
-  }
-</script>
 
 <script type="text/javascript">
 
@@ -295,4 +184,23 @@ GY.use('irm','node','substitute','yui2-editor', function(Y) {
       editor.saveHTML();
     });
 });
+</script>
+
+<script type="text/javascript">
+  GY.use("duelselect",function(Y){
+    var duelselect = new Y.DuelSelect({source:"#source",target:"#target",valueNode:"#selectedActions",type:Y.one("#actionType").get("value"),addButton:"#duelAdd",removeButton:"#duelRemove"});
+    Y.one("#actionType").on("change",function(e){
+      Y.one("#duelQuery").set("value","");
+      duelselect.filter(Y.one("#actionType").get("value"),Y.one("#duelQuery").get("value"));
+    });
+    Y.one("#duelSearch").on("click",function(e){
+      duelselect.filter(Y.one("#actionType").get("value"),Y.one("#duelQuery").get("value"));
+    });
+    Y.one("#duelQuery").on("keydown",function(e){
+      if(e.keyCode==13){
+          e.preventDefault();
+          duelselect.filter(Y.one("#actionType").get("value"),Y.one("#duelQuery").get("value"));
+      }
+    });
+  });
 </script>
