--- a/app/views/csi/surveys/_edit_form.html.erb
+++ b/app/views/csi/surveys/_edit_form.html.erb
@@ -113,6 +113,81 @@
         </tbody>
       </table>
     </div>
+
+    <!-- Survey Range -->
+    <div class="pbSubheader first tertiaryPalette">
+      <span class="pbSubExtra">
+      </span>
+      <h3><%=t(:label_csi_survey_range)%></h3>
+    </div>
+
+    <div class="pbSubsection">
+      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
+        <tbody>
+            <tr>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label for="actionType"><%=t(:label_irm_wf_rule_action_type)%></label></td>
+              <td class="dataCol" colspan="3" style="width:82%">
+                <div class="actonType">
+                     <label><%= t(:search) %></label>
+                </div>
+                <div class="actonType">
+                  <select id="actionType">
+                    <option value="C"><%= t(:label_irm_company) %></option>
+                    <option value="O"><%= t(:label_irm_organization) %></option>
+                    <option value="D"><%= t(:label_irm_department_show) %></option>
+                    <option value="R"><%= t(:label_irm_role) %></option>
+                    <option value="S"><%= t(:label_irm_site) %></option>
+                  </select>
+                </div>
+                <div class="actonType">
+                  <input type="text" size="30" id="duelQuery"/>
+                </div>
+                <div class="actonType">
+                   <div class="button"><a href="javascript:void(0)" id="duelSearch"><%=t(:search) %></a></div>
+                </div>
+              </td>
+            </tr>
+            <tr id="actions">
+              <td class="labelCol"></td>
+              <td class="dataCol" colspan="3" width="82%">
+                <table class="duel">
+                  <tr class="duelTitle">
+                    <th><%= t(:duel_selectable)%></th>
+                    <th></th>
+                    <th><%= t(:duel_selected)%></th>
+                  </tr>
+                  <tr class="duelList">
+                    <td class="sourceCell">
+                      <%= select_tag_alias(:source,ava_survey_ranges,nil,{:id=>"source",:multiple=>true,:size=>14}) %>
+                    </td>
+                    <td class="buttonCell">
+                      <div class="text"><%= t(:add) %></div>
+                      <div class="text">
+                        <a href="javascript:void(0)" id="duelAdd"><img title="<%= t(:add) %>" class="rightArrowIcon" alt="<%= t(:add) %>" src="<%= theme_image_path("s.gif") %>"></a>
+                      </div>
+                      <div class="text">
+                        <a href="javascript:void(0)" id="duelRemove"><img title="<%= t(:delete) %>" class="leftArrowIcon" alt="<%= t(:delete) %>" src="<%= theme_image_path("s.gif") %>"></a>
+                      </div>
+                      <div class="duelingText"><%= t(:delete) %></div>
+                    </td>
+                    <td class="targetCell">
+                      <%= hidden_field_tag(:selected_actions, own_own_survey_ranges(@survey.id), {:id=>"selectedActions"}) %>
+                      <%= select_tag_alias(:target,[],nil,{:id=>"target",:multiple=>true,:size=>14}) %>
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+        </tbody>
+      </table>
+    </div>
+
   </div>
   <div class="pbBottomButtons">
     <table cellpadding="0" cellspacing="0" border="0">
@@ -134,3 +209,22 @@
 
 <%= calendar_view("date1","date1","cal1")%>
 <%= calendar_view("date2","date2","cal2")%>
+
+<script type="text/javascript">
+  GY.use("duelselect",function(Y){
+    var duelselect = new Y.DuelSelect({source:"#source",target:"#target",valueNode:"#selectedActions",type:Y.one("#actionType").get("value"),addButton:"#duelAdd",removeButton:"#duelRemove"});
+    Y.one("#actionType").on("change",function(e){
+      Y.one("#duelQuery").set("value","");
+      duelselect.filter(Y.one("#actionType").get("value"),Y.one("#duelQuery").get("value"));
+    });
+    Y.one("#duelSearch").on("click",function(e){
+      duelselect.filter(Y.one("#actionType").get("value"),Y.one("#duelQuery").get("value"));
+    });
+    Y.one("#duelQuery").on("keydown",function(e){
+      if(e.keyCode==13){
+          e.preventDefault();
+          duelselect.filter(Y.one("#actionType").get("value"),Y.one("#duelQuery").get("value"));
+      }
+    });
+  });
+</script>
