添加审批流程的提交页面，审批页面，转交页面以及审批历史显示页面

--- a/app/views/icm/incident_journals/new.html.erb
+++ b/app/views/icm/incident_journals/new.html.erb
@@ -1,2 +1,3 @@
 <%= page_title("",t(:label_icm_reply)) %>
 <%= render 'new_form'%>
+<%= approval_history(@incident_request.id,Icm::IncidentRequest.name) %>
