--- a/app/views/irm/home/index.html.erb
+++ b/app/views/irm/home/index.html.erb
@@ -56,6 +56,13 @@
                 <tr>
                   <td colspan="2">
                     <div class="toolsContentRight">
+                      <%= my_approvals %>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td colspan="2">
+                    <div class="toolsContentRight">
                     </div>
                   </td>
                 </tr>
