--- a/app/views/irm/wf_process_instances/_my_approvals.html.erb
+++ b/app/views/irm/wf_process_instances/_my_approvals.html.erb
@@ -74,7 +74,7 @@
                             </td>
                             <td class="yui3-column">
                               <div class='yui3-datatable-liner'>
-                                <%= step_instance[:submitter_at] %>
+                                <%= format_date(step_instance[:submitted_at]) %>
                               </div>
                             </td>
                           </tr>
