富文本编辑器以所见即所得的方式, 直接插入图片
将公告的编辑、新建页面，事故单新建、回复界面的富编辑器增加一个插入图片的按钮。
采用JAVA APPLET，允许用户从系统剪切板获取图片，上传后直接插入到富编辑器中。

需要用户安装JRE1.5以上环境。IE下会检测用户是否安装JRE，如无安装则会自动下载安装（1.5u22）。其它浏览器需要手动下载安装JRE。

--- a/app/views/demo/index.html.erb
+++ b/app/views/demo/index.html.erb
@@ -1,31 +1,20 @@
-<div id="testDiv"></div>
-
-<%= link_to "testButton", {},
-            :href => "javascript:void(0);",
-            :id => "testButton",
-            :onclick => "getImg();"%>
+<div id="attach_applet"></div>
+<%= url_for(:only_path => false, :controller => "irm/attach_screenshot", :action => 'index')%>
 <script type="text/javascript">
-  GY.use(function(Y) {
-      var testDiv = Y.one("#testDiv");
-      var appletStr = '<applet id="screenSaver" name="screenSaver" code="ScreenSaver.class" archive="applets/ScreenSaver.jar" width="640" height="480"> Java applet that draws animated bubbles. </applet>';
-
-      testDiv.set("innerHTML", appletStr);
-  });
-
-  function reloadImg(){
-      screenSaver.reloadClipboard();
-  }
-
-  function getImg(){
-      alert("!!");
-      var img = screenSaver.getImg();
-      alert(getType(img));
-
-  }
-
-    function getType(o) {
-        var _t;
-        return ((_t = typeof(o)) == "object" ? o==null && "null" || Object.prototype.toString.call(o).slice(8,-1):_t).toLowerCase();
+    function showAttachScreen() {
+        document.getElementById('attach_applet').style.display = 'block';
+        document.getElementById('attach_applet').innerHTML = '<applet code="com.handchina.ironmine.ScreenSaver.class" archive="/applets/ScreenSaver.jar" height="600" width="700" MAYSCRIPT>'+
+                                                             '<param name="label.image" value="<%= t(:label_image) %>">' +
+                                                             '<param name="label.button.paste" value="<%= t(:label_button_paste) %>">' +
+                                                             '<param name="label.button.attach" value="<%= t(:button_attach) %>">' +
+                                                             '<param name="label.button.cancel" value="<%= t(:button_cancel) %>">' +
+                                                             '<param name="error.close.msg" value="<%= t(:error_close_msg) %>">' +
+                                                             '<param name="error.close.title" value="<%= t(:error_close_title) %>">' +
+                                                             '<param name="attach.url" value="<%= url_for(:only_path => false, :controller => "irm/attach_screenshot", :action => 'index')%>">' +
+                                                             '<param name="error.attach.msg" value="<%= t(:error_attach_msg) %>">' +
+                                                             '<param name="error.attach.title" value="<%= t(:error_attach_title) %>">'	 +
+                                                             '<param name="rss.key" value="_">'	 +
+                                                             'Applet</applet>';
     }
-
+    showAttachScreen();
 </script>
