fix upload file bug

--- a/app/views/skm/file_managements/_new_form.html.erb
+++ b/app/views/skm/file_managements/_new_form.html.erb
@@ -69,12 +69,12 @@
 <script type="text/javascript">
   function save(){
     document.file_form.action = "create";
-    file_form.submit();
+    document.file_form.submit();
   }
 
   function save_and_new(){
     document.file_form.action = "create?act=next";
-    file_form.submit();
+    document.file_form.submit();
   }
 </script>    
 <% end %>
