--- a/app/views/skm/file_managements/batch_new.html.erb
+++ b/app/views/skm/file_managements/batch_new.html.erb
@@ -106,7 +106,7 @@
   
   function save(){
     document.file_form.action = "batch_create";
-    file_form.submit();
+    document.file_form.submit();
   }
  function delete_line(l)
  {
